--- a/rule/ssr.conf
+++ b/rule/ssr.conf
@@ -199,17 +199,20 @@ picsew专业版 = type=http-response,script-path=https://raw.githubusercontent.c
 
 
 #百度网盘解锁vip，视频倍速播放     pan.baidu.com
-https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/zwf234/rules/master/js/BaiduCloud.js
+百度网盘解锁vip = type=http-response,script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/BaiduCloud.js,pattern=https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+
 
 # WPS解锁  超级会员、wps会员、稻壳会员 account.wps.cn
-^https://account.wps.*/api/users/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Wps.js
+WPS解锁 = type=http-response,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Wps.js,pattern=^https://account.wps.*/api/users/,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+
 
 # 扫描全能王 pro
-^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js
+扫描全能王 = type=http-response,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js,pattern=^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\?,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+
 
 # IT之家 去新闻列表广告
-^https?:\/\/api\.ithome\.com\/json\/slide\/index url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/ITHome.js
-^https?:\/\/api\.ithome\.com\/json\/(newslist|listpage)\/news url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/ITHome.js
+IT之家去新闻列表广告 = type=http-response,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/ITHome.js,pattern=^https?:\/\/api\.ithome\.com\/json\/slide\/index,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+IT之家去新闻列表广告 = type=http-response,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/ITHome.js,pattern=^https?:\/\/api\.ithome\.com\/json\/(newslist|listpage)\/news,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
 
 
 BoxJs = type=http-request,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/chavy.boxjs.js,pattern=^https?://boxjs.com,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
