--- a/rule/ssr.conf
+++ b/rule/ssr.conf
@@ -34,6 +34,7 @@ RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_reject.l
 # 广告拦截
 RULE-SET,https://limbopro.com/Adblock4limbo.list,REJECT
 RULE-SET,https://raw.githubusercontent.com/NobyDa/Script/master/Surge/AdRule.list,REJECT
+RULE-SET,https://qxnav.com/rules/QuantumultX/gz/advertising.list,REJECT
 
 #--其他规则
 DOMAIN-KEYWORD,apple,DIRECT
