--- a/rule/ssr_ml.conf
+++ b/rule/ssr_ml.conf
@@ -38,6 +38,8 @@ RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/rule/appleOTA.list
 # 广告拦截
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Privacy/Privacy_Domain.list,REJECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AdvertisingTest/AdvertisingTest.list,REJECT
+RULE-SET,https://qxnav.com/rules/QuantumultX/gz/advertising.list,REJECT
+
 # 屏蔽系统更新
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/SystemOTA/SystemOTA.list,REJECT
 
