--- a/rule/ssr.conf
+++ b/rule/ssr.conf
@@ -171,8 +171,7 @@ https://homefront.qunar.com/front/splash/ad url reject
 
 [Script]
 
-微信阅读 = type=http-response,script-path=https://raw.githubusercontent.com/WSL33099/QuantumultX/main/jiaoben/wechat_auto_read.js,pattern=^https?://mp\.weixin\.qq\.com/s\?.*,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
-
+微信自动阅读（羊毛） = type=http-response,script-path=https://github.com/ddgksf2013/Scripts/raw/master/wechat_auto_read.js,pattern=^https?://mp\.weixin\.qq\.com/s\?.*,max-size=131072,requires-body=true,timeout=10,enable=true
 
 
 # ------------------------------------------------------------------去广告脚本--------------------------------------------------------------------
