--- a/rule/ssr.conf
+++ b/rule/ssr.conf
@@ -24,6 +24,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/NobyDa/Script/master/Surge/WeChat.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AppStore/AppStore.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Weibo/Weibo.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/China.list,DIRECT
 
 # 个人规则
@@ -34,6 +35,7 @@ RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_reject.l
 # 广告拦截
 RULE-SET,https://limbopro.com/Adblock4limbo.list,REJECT
 RULE-SET,https://raw.githubusercontent.com/NobyDa/Script/master/Surge/AdRule.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/moyu/Mybreak.list,REJECT
 RULE-SET,https://qxnav.com/rules/QuantumultX/gz/advertising.list,REJECT
 
 #--其他规则
